--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "relisio-product-action",
+  "name": "relisio-project-action",
   "version": "1.0.0",
-  "description": "Create a new Relisio product from GitHub.",
+  "description": "Create a new Relisio project from GitHub.",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Studio-41/relisio-product-action.git"
+    "url": "git+https://github.com/Studio-41/relisio-project-action.git"
   },
   "keywords": [
     "actions",
@@ -28,9 +28,9 @@
   "author": "Marco Casula",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Studio-41/relisio-product-action/issues"
+    "url": "https://github.com/Studio-41/relisio-project-action/issues"
   },
-  "homepage": "https://github.com/Studio-41/relisio-product-action#readme",
+  "homepage": "https://github.com/Studio-41/relisio-project-action#readme",
   "dependencies": {
     "@actions/core": "^1.6.0"
   },
